manifests/ns-wordpress/recipes/mariadb.yaml
---
# Source: wordpress/charts/mariadb/templates/master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress
  labels:
    app: "mariadb"
    component: "master"
    chart: "mariadb-7.0.1"
    release: "team7"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector:
    app: "mariadb"
    component: "master"
    release: "team7"
---
# Source: wordpress/charts/mariadb/templates/master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: wordpress
  labels:
    app: mariadb
    chart: mariadb-7.0.1
    release: team7
    heritage: Helm
    component: master
spec:
  selector:
    matchLabels:
      app: mariadb
      release: team7
      component: master
  serviceName: mariadb
  replicas: 0
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mariadb
        chart: mariadb-7.0.1
        release: team7
        component: master
    spec:
      serviceAccountName: default
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: mariadb
                    release: team7
      containers:
        - name: "mariadb"
          image: docker.io/bitnami/mariadb:10.3.20-debian-9-r0
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            exec:
              command:
                [
                  "sh",
                  "-c",
                  "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD",
                ]
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                [
                  "sh",
                  "-c",
                  "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD",
                ]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /bitnami/mariadb
            - name: config
              mountPath: /opt/bitnami/mariadb/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: mariadb
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: "mariadb"
          component: "master"
          release: "team7"
          heritage: "Helm"
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
