manifests/ns-wordpress/recipes/wordpress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/proxy-body-size: 128m

    cert-manager.io/issuer: letsencrypt-prod

    external-dns.alpha.kubernetes.io/ttl: "120"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  tls:
  - hosts:
    - unchartedsky.com
    secretName: tls-wordpress
  rules:
  - host: unchartedsky.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 443
---
# Source: wordpress/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: "wordpress"
    chart: "wordpress-8.0.1"
    release: "team7"
    heritage: "Helm"
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      # protocol: TCP
    - name: https
      port: 443
      targetPort: https
    #   # protocol: TCP
  selector:
    app: "wordpress"
---
# Source: wordpress/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: "wordpress"
    chart: "wordpress-8.0.1"
    release: "team7"
    heritage: "Helm"
spec:
  selector:
    matchLabels:
      app: "wordpress"
      release: "team7"
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: "wordpress"
        chart: "wordpress-8.0.1"
        release: "team7"
    spec:
      # securityContext:
      #   enabled: true
      #   fsGroup: 0
      #   runAsUser: 0
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "status.localhost"
      imagePullSecrets:
      - name: github-andromedarabbit
      containers:
      - name: wordpress
        image: docker.pkg.github.com/unchartedsky/bitnami/wordpress-nginx:latest
        imagePullPolicy: "IfNotPresent"
        args:
        - /scripts/go.sh
        # command: ["/bin/sh"]
        # args: ["-c", "while true; do echo hello; sleep 10;done"]
        lifecycle:
          postStart:
            exec:
              command:
                - "sh"
                - "-c"
                - >
                  /usr/bin/crontab /etc/cron.d/wpcron && /usr/sbin/cron;
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          httpGet:
            path: /wp-login.php
            port: http
          failureThreshold: 6
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /wp-login.php
            port: http
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /bitnami/wordpress
          name: wordpress-data
          subPath: wordpress
        - name: wordpress-config
          mountPath: /opt/tmp-configs
        - name: newrelic-ini
          mountPath: /opt/tmp-secrets
        - name: tls-config
          mountPath: /opt/tls
        - name: scripts-d
          mountPath: /scripts
        resources:
          requests:
            cpu: 100m
            memory: 257Mi
          limits:
            cpu: 3000m
            memory: 3072Mi
      volumes:
      - name: wordpress-data
        persistentVolumeClaim:
          claimName: wordpress
      - name: wordpress-config
        configMap:
          name: wordpress-config
      - name: newrelic-ini
        secret:
          secretName: wordpress
          items:
          - key: newrelic.ini
            path: newrelic.ini
      - name: tls-config
        secret:
          secretName: tls-wordpress
      - name: scripts-d
        projected:
          defaultMode: 500
          sources:
          - configMap:
              name: wordpress-scripts
              items:
              - key: go.sh
                path: go.sh
